--- a/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1/MDK-ARM/I2C_PB8_PB9_v1.uvprojx
+++ b/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1/MDK-ARM/I2C_PB8_PB9_v1.uvprojx
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F446xx</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include</IncludePath>
+              <IncludePath>../Core/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;..\Drivers\BME280_driver-master</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -408,6 +408,16 @@
               <FileName>stm32f4xx_hal_msp.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Core/Src/stm32f4xx_hal_msp.c</FilePath>
+            </File>
+            <File>
+              <FileName>HAL_i2c_rw_functions_BME280.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\HAL_i2c_rw_functions_BME280.c</FilePath>
+            </File>
+            <File>
+              <FileName>HAL_i2c_rw_functions_BME280.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\HAL_i2c_rw_functions_BME280.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -517,6 +527,26 @@
           </Files>
         </Group>
         <Group>
+          <GroupName>Drivers/BME280</GroupName>
+          <Files>
+            <File>
+              <FileName>bme280.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\BME280_driver-master\bme280.c</FilePath>
+            </File>
+            <File>
+              <FileName>bme280.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\BME280_driver-master\bme280.h</FilePath>
+            </File>
+            <File>
+              <FileName>bme280_defs.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Drivers\BME280_driver-master\bme280_defs.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
           <GroupName>::CMSIS</GroupName>
         </Group>
       </Groups>
@@ -535,5 +565,14 @@
     </components>
     <files/>
   </RTE>
+
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>I2C_PB8_PB9_v1</LayName>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
 
 </Project>
